--- a/ColorizedApp/Base.lproj/Main.storyboard
+++ b/ColorizedApp/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="32700.99.1234" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina6_12" orientation="portrait" appearance="light"/>
+    <device id="retina6_72" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22685"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -13,18 +13,18 @@
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="ColorizedApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <rect key="frame" x="0.0" y="0.0" width="430" height="932"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6sd-kT-vM6">
-                                <rect key="frame" x="16" y="79" width="361" height="148"/>
+                                <rect key="frame" x="16" y="79" width="398" height="148"/>
                                 <color key="backgroundColor" systemColor="systemFillColor"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="148" id="yVJ-pV-2W9"/>
                                 </constraints>
                             </view>
                             <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="loy-GH-YtC">
-                                <rect key="frame" x="16" y="277" width="361" height="130"/>
+                                <rect key="frame" x="16" y="277" width="398" height="130"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="30" translatesAutoresizingMaskIntoConstraints="NO" id="zIe-8I-CnT">
                                         <rect key="frame" x="0.0" y="4.6666666666666856" width="60" height="121"/>
@@ -53,44 +53,53 @@
                                         </constraints>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="30" translatesAutoresizingMaskIntoConstraints="NO" id="BAn-vt-MRR">
-                                        <rect key="frame" x="70" y="4.6666666666666856" width="35" height="121"/>
+                                        <rect key="frame" x="70" y="4.6666666666666856" width="46" height="121"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0.00" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aeh-Ev-DNj">
-                                                <rect key="frame" x="0.0" y="0.0" width="35" height="20.333333333333332"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="46" height="20.333333333333332"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0.00" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2Sf-4t-oKd">
-                                                <rect key="frame" x="0.0" y="50.333333333333314" width="35" height="20.333333333333329"/>
+                                                <rect key="frame" x="0.0" y="50.333333333333314" width="46" height="20.333333333333329"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0.00" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xte-nu-Mxs">
-                                                <rect key="frame" x="0.0" y="100.66666666666663" width="35" height="20.333333333333329"/>
+                                                <rect key="frame" x="0.0" y="100.66666666666663" width="46" height="20.333333333333329"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                         </subviews>
                                         <constraints>
-                                            <constraint firstAttribute="width" constant="35" id="sew-O3-dqJ"/>
+                                            <constraint firstAttribute="width" constant="46" id="sew-O3-dqJ"/>
                                         </constraints>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="4WQ-ec-mlW">
-                                        <rect key="frame" x="115" y="0.0" width="246" height="130"/>
+                                        <rect key="frame" x="126" y="0.0" width="272" height="130"/>
                                         <subviews>
                                             <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="C8E-bu-11M">
-                                                <rect key="frame" x="-2" y="0.0" width="250" height="31"/>
+                                                <rect key="frame" x="-2" y="0.0" width="276" height="31"/>
                                                 <color key="minimumTrackTintColor" systemColor="systemRedColor"/>
+                                                <connections>
+                                                    <action selector="updateColor" destination="BYZ-38-t0r" eventType="valueChanged" id="vgH-f7-TWm"/>
+                                                </connections>
                                             </slider>
-                                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="ADz-7S-gNe">
-                                                <rect key="frame" x="-2" y="50" width="250" height="31"/>
+                                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.20000000000000001" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="ADz-7S-gNe">
+                                                <rect key="frame" x="-2" y="50" width="276" height="31"/>
                                                 <color key="minimumTrackTintColor" systemColor="systemGreenColor"/>
+                                                <connections>
+                                                    <action selector="updateColor" destination="BYZ-38-t0r" eventType="valueChanged" id="Gp0-PS-lS9"/>
+                                                </connections>
                                             </slider>
-                                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="LFY-9A-vZv">
-                                                <rect key="frame" x="-2" y="100" width="250" height="31"/>
+                                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.80000000000000004" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="LFY-9A-vZv">
+                                                <rect key="frame" x="-2" y="100" width="276" height="31"/>
+                                                <connections>
+                                                    <action selector="updateColor" destination="BYZ-38-t0r" eventType="valueChanged" id="j9k-VD-wE7"/>
+                                                </connections>
                                             </slider>
                                         </subviews>
                                     </stackView>
@@ -108,6 +117,15 @@
                             <constraint firstAttribute="trailing" secondItem="loy-GH-YtC" secondAttribute="trailing" constant="16" id="ncr-o6-k8u"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="blueSlider" destination="LFY-9A-vZv" id="Wy3-hP-N5n"/>
+                        <outlet property="blueValueLabel" destination="xte-nu-Mxs" id="zFb-41-gPp"/>
+                        <outlet property="colorView" destination="6sd-kT-vM6" id="h4d-cl-cEu"/>
+                        <outlet property="greenSlider" destination="ADz-7S-gNe" id="yTz-8k-iHj"/>
+                        <outlet property="greenValueLabel" destination="2Sf-4t-oKd" id="qmB-KT-sEA"/>
+                        <outlet property="redSlider" destination="C8E-bu-11M" id="EPx-E9-rvc"/>
+                        <outlet property="redValueLabel" destination="aeh-Ev-DNj" id="saD-s8-ECD"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
